fix the spacing in execution graph and minor ui fix

--- a/openmetadata-ui/src/main/resources/ui/src/components/DataContract/ContractDetailTab/contract-detail.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/DataContract/ContractDetailTab/contract-detail.less
@@ -140,7 +140,7 @@
 }
 
 .contract-detail-container {
-  width: 90%;
+  width: 95%;
 
   .contract-card-items {
     margin-bottom: 32px;
