--- a/openmetadata-ui/src/main/resources/ui/src/components/DataContract/ContractQualityCard/contract-quality-card.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/DataContract/ContractQualityCard/contract-quality-card.less
@@ -12,13 +12,16 @@
  */
 @import (reference) '../../../styles/variables.less';
 
-.data-quality-total-test {
-  font-size: 14px;
-  font-weight: 400;
-  color: @grey-600;
+.data-quality-card-container {
+  .data-quality-total-test {
+    font-size: 14px;
+    font-weight: 400;
+    color: @grey-600;
 
-  .data-quality-total-test-value {
-    font-weight: 600;
+    .data-quality-total-test-value {
+      font-weight: 600;
+      color: @grey-800;
+    }
   }
 }
 
@@ -56,6 +59,7 @@
 
       .data-quality-legends-value {
         font-weight: 600;
+        color: @grey-800;
       }
     }
   }
